# JustNotepad

./: .gitignore  AllFeatures.md  CMakeLists.txt  README.md  build.ps1  clean.ps1  compile_flags.txt  fast_build.ps1  package.ps1  rebuild.ps1  release.ps1  sample.json  sample.xml  test_highlight.cpp  test_tags.cpp
docs/: index.html  style.css
macros/: Open Containing Folder.ps1  Open in Command Prompt.ps1  Open in Default App.ps1
plugins/AdvancedSearchPlugin/: AdvancedSearchPlugin.cpp  AdvancedSearchPlugin.rc  CMakeLists.txt  resource.h
plugins/CharacterMapPlugin/: CMakeLists.txt  CharacterMapPlugin.cpp  CharacterMapPlugin.def  CharacterMapPlugin.rc  resource.h
plugins/ClangFormatPlugin/: CMakeLists.txt  ClangFormatPlugin.cpp  ClangFormatPlugin.rc  resource.h
plugins/CppToolsPlugin/: CMakeLists.txt  CppToolsPlugin.cpp  CppToolsPlugin.def
plugins/CtagsPlugin/: CMakeLists.txt  CtagsPlugin.cpp  CtagsPlugin.def  README.txt  download_ctags.ps1  resource.h
plugins/DataViewerPlugin/: CMakeLists.txt  DataViewerPlugin.cpp  DataViewerPlugin.def  DataViewerPlugin.rc  resource.h
plugins/DateTimePlugin/: CMakeLists.txt  DateTimePlugin.cpp  DateTimePlugin.def
plugins/EmojiPlugin/: CMakeLists.txt  EmojiPlugin.cpp  EmojiPlugin.def  EmojiPlugin.rc  resource.h
plugins/GenericAutocompletePlugin/: CMakeLists.txt  GenericAutocompletePlugin.cpp  GenericAutocompletePlugin.def  README.txt
plugins/GitPlugin/: CMakeLists.txt  GitPlugin.cpp  GitPlugin.rc  resource.h
plugins/GuidPlugin/: CMakeLists.txt  GuidPlugin.cpp  GuidPlugin.def
plugins/HelloPlugin/: CMakeLists.txt  HelloPlugin.cpp  HelloPlugin.def
plugins/HexEditorPlugin/: CMakeLists.txt  HexEditorPlugin.cpp  HexEditorPlugin.def
plugins/JsonViewerPlugin/: CMakeLists.txt  JsonViewerPlugin.cpp  JsonViewerPlugin.def  resource.h
plugins/MacrosPlugin/: CMakeLists.txt  MacrosPlugin.cpp
plugins/MarkdownToolsPlugin/: CMakeLists.txt  MarkdownToolsPlugin.cpp  MarkdownToolsPlugin.def
plugins/Neon/: CMakeLists.txt  Neon.cpp  Neon.def  Neon.rc
plugins/Neon/highlight/: CMakeLists.txt  ChangeLog.adoc  README.adoc  README_DE.adoc  filetypes.conf
plugins/Neon/highlight/extras/langDefs-resources/: cleanslate.lang  template.lang
plugins/Neon/highlight/gui_files/l10n/: highlight_cs_CZ.qm  highlight_es_ES.qm  highlight_fr_FR.qm  highlight_it_IT.qm
plugins/Neon/highlight/src/cli/: cmdlineoptions.h
plugins/Neon/highlight/src/core/astyle/: ASEnhancer.cpp
plugins/Neon/highlight/src/gui-qt/: highlight_bg_BG.ts  highlight_es_ES.ts  highlight_fr_FR.ts  highlight_it_IT.ts  main.cpp  mainwindow.cpp
plugins/Neon/highlight/src/include/: codegenerator.h  lspclient.h  lspprofile.h
plugins/NeonPlugin/: CMakeLists.txt  NeonPlugin.cpp  NeonPlugin.def  resource.h
plugins/NeonPlugin/highlight/: CMakeLists.txt  INSTALL  README_FR.adoc  README_PLUGINS.adoc  makefile
plugins/NeonPlugin/highlight/extras/langs-examples/: CONTRIBUTING.md
plugins/NeonPlugin/highlight/extras/langs-examples/_sass/: README.md
plugins/NeonPlugin/highlight/extras/pandoc/: example.pb
plugins/NeonPlugin/highlight/gui_files/ext/: fileopenfilter.conf
plugins/NeonPlugin/highlight/gui_files/l10n/: highlight_bg_BG.qm  highlight_de_DE.qm  highlight_zh_CN.qm
plugins/NeonPlugin/highlight/langDefs/: shellscript.lang
plugins/NeonPlugin/highlight/src/cli/: main.cpp
plugins/NeonPlugin/highlight/src/core/: codegenerator.cpp  lspclient.cpp
plugins/NeonPlugin/highlight/src/core/astyle/: ASBeautifier.cpp  ASFormatter.cpp  ASResource.cpp
plugins/NeonPlugin/highlight/src/gui-qt/: highlight_cs_CZ.ts  highlight_de_DE.ts  highlight_zh_CN.ts
plugins/NeonPlugin/highlight/src/include/: version.h
plugins/NeonPlugin/highlight/src/include/astyle/: astyle.h
plugins/PerforcePlugin/: CMakeLists.txt  PerforcePlugin.cpp  PerforcePlugin.rc  resource.h
plugins/PowerShellScripts/: CMakeLists.txt  PowerShellScripts.cpp
plugins/ThemeSwitcherPlugin/: CMakeLists.txt  ThemeSwitcherPlugin.cpp
plugins/WhitespaceVisualizerPlugin/: CMakeLists.txt  WhitespaceVisualizerPlugin.cpp  WhitespaceVisualizerPlugin.def
plugins/WindowsShellPlugin/: CMakeLists.txt  WindowsShellPlugin.cpp
src/: JustNotepad.manifest  PluginInterface.h  PluginManager.cpp  PluginManager.h  TextHelpers.cpp  TextHelpers.h  Version.h  main.cpp  resource.h  resources.rc
tests/: PluginTests.cpp  UnitTests.cpp
website/: index.html
